tests/lean/non_exhaustive_error.lean.expected.out
non_exhaustive_error.lean:3:11: error: invalid non-exhaustive set of equations (use 'set_option trace.eqn_compiler.elim_match true' for additional details)
